# home-ops

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.atl/: .skill-registry.cache.json  skill-registry.md
.github/workflows/: ci.yml
config/: user_profile.template.yml
openspec/changes/archive/2026-06-18-automated-cycle/: design.md  proposal.md  tasks.md  verify-report.md
openspec/changes/archive/2026-06-18-automated-cycle/specs/daemon-scheduler/: spec.md
src/home_ops/: __init__.py
src/home_ops/alerter/: __init__.py  gates.py  telegram.py
src/home_ops/cli/: __init__.py  app.py
src/home_ops/config/: loader.py
src/home_ops/models/: __init__.py  data_storage.py  schema.py
src/home_ops/scorer/: __init__.py  affordability.py  gemini.py  models.py  rules.py
src/home_ops/scraper/: __init__.py  apify.py  dedup.py  lifecycle.py  parse.py  retry.py
systemd/: homeops.service
tests/: __init__.py  conftest.py  test_apify.py  test_cli.py  test_config_loader.py  test_data_storage.py  test_dedup.py  test_gates.py  test_gemini.py  test_lifecycle.py  test_parse.py  test_retry.py  test_rules.py  test_schema.py  test_scoring.py  test_telegram.py
